; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_prop.c_dsl_props_set.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_prop.c_dsl_props_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32* }

@ZPROP_SRC_NONE = common dso_local global i32 0, align 4
@dsl_props_set_check = common dso_local global i32 0, align 4
@dsl_props_set_sync = common dso_local global i32 0, align 4
@ZFS_SPACE_CHECK_RESERVED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsl_props_set(i8* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %8, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i8* %9, i8** %10, align 8
  %11 = load i32, i32* %5, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i32 %11, i32* %12, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  store i32* %13, i32** %14, align 8
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @ZPROP_SRC_NONE, align 4
  %17 = and i32 %15, %16
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %3
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @fnvlist_num_pairs(i32* %20)
  %22 = mul nsw i32 2, %21
  store i32 %22, i32* %8, align 4
  br label %23

23:                                               ; preds = %19, %3
  %24 = load i8*, i8** %4, align 8
  %25 = load i32, i32* @dsl_props_set_check, align 4
  %26 = load i32, i32* @dsl_props_set_sync, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* @ZFS_SPACE_CHECK_RESERVED, align 4
  %29 = call i32 @dsl_sync_task(i8* %24, i32 %25, i32 %26, %struct.TYPE_3__* %7, i32 %27, i32 %28)
  ret i32 %29
}

declare dso_local i32 @fnvlist_num_pairs(i32*) #1

declare dso_local i32 @dsl_sync_task(i8*, i32, i32, %struct.TYPE_3__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
